# QR-Hunt-Backend

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.sh
api/: Cargo.toml  database.db  found.py  login.py
api/src/: database.db  main.rs  structs.rs
db/: Cargo.toml  qr.db
db/src/: main.rs
src/: main.rs
web_server/: Cargo.toml
web_server/src/: main.rs
